pages/dcos/services/beta-storage/0.5.3-beta/cli-references/dcos-storage-volume/dcos-storage-volume-remove/index.md
---
layout: layout.pug
navigationTitle: dcos storage volume remove
title: dcos storage volume remove
menuWeight: 0
notes: Code generated by docgen.go, DO NOT EDIT
enterprise: true
beta: true
origin: github.com/mesosphere/dcos-storage/cli/pkg/cmd/cmd_volume_remove.go
excerpt: Remove a volume.
---
#include /dcos/services/include/beta-software-warning.tmpl

## dcos storage volume remove

Remove a volume.

### Synopsis

Arguments:

    <name>     The name of the volume.

If the volume is in use an error is returned.

```bash
dcos storage volume remove <name> [flags]
```

### Examples

1. Create a SSD-backed volume from a `fast` volume profile that selects a `lvm` volume provider then remove it again:

```bash
# Create a 'ssds' volume provider on node
# <c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2>, where we know xvdb and xvdc are
# both SSDs.
$ cat <<EOF | dcos storage provider create
{
    "name": "ssds",
    "spec": {
        "plugin": "lvm",
        "node": "c67efa5d-34fa-4bc5-8b21-2a5e0bd52385-S2",
        "plugin-configuration": {
            "devices": ["xvdb", "xvdc"]
        },
        "labels": {"rotational": "false"}
    }
}
EOF

# Create a volume profile called 'fast' that selects volume
# providers that provide solid-state storage capacity.
$ cat <<EOF | dcos storage profile create
{
    "name": "fast",
    "spec": {
        "provider-selector": {
            "plugin": "lvm",
            "matches": {
                "labels": {"rotational": "false"}
            }
        },
        "mount": {}
    }
}
EOF

# Create a SSD-backed volume without specifying a specific provider.
$ dcos storage volume create my-volume-1 10G fast

# Remove the volume again.
$ dcos storage volume remove my-volume-1
```

### Options inherited from parent commands

Name | Description
--- | ---
`-h`,`--help` | Help for this command.
`--timeout` duration | Override the default request timeout. (default 55s)

